12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Iceland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Iceland_l_english.yml
@@ -1,25 +1,65 @@
-﻿l_english:
+l_english:
+
+### Parties ###
+ICE_totalist_party:0 "TF-I"
+ICE_totalist_party_long:0 "Totalistaflokkur Íslands"
+ICE_radical_socialist_party:0 "KF-I"
+ICE_radical_socialist_party_long:0 "Kommúnistaflokkur Íslands"
+ICE_syndicalist_party:0 "SS"
+ICE_syndicalist_party_long:0 "Stjórnleysisstefna"
+ICE_social_democrat_party:0 "AF"
+ICE_social_democrat_party_long:0 "Alþýðuflokkurinn"
+ICE_market_liberal_party:0 "SF"
+ICE_market_liberal_party_long:0 "Sjálfstæðisflokkurinn"
+ICE_social_liberal_party:0 "FSF"
+ICE_social_liberal_party_long:0 "Framsóknarflokkurinn"
+ICE_social_conservative_party:0 "HF"
+ICE_social_conservative_party_long:0 "Heimastjórnarflokkurinn"
+ICE_authoritarian_democrat_party:0 "NA"
+ICE_authoritarian_democrat_party_long:0 "Þjóðvaki"
+ICE_paternal_autocrat_party:0 "FTH"
+ICE_paternal_autocrat_party_long:0 "Flokkur Þjóðernissinna"
+ICE_national_populist_party:0 "FTH"
+ICE_national_populist_party_long:0 "Flokkur Þjóðernissinna"
+
+### Cosmetic Tags ###
+ICE_icelandic_republic_social_democrat:0 "Republic of Iceland"
+ICE_icelandic_republic_social_liberal:0 "Republic of Iceland"
+ICE_icelandic_republic_market_liberal:0 "Republic of Iceland"
+ICE_icelandic_republic_social_conservative:0 "Republic of Iceland"
+ICE_icelandic_republic_authoritarian_democrat:0 "Republic of Iceland"
+ICE_icelandic_republic_paternal_autocrat:0 "Republic of Iceland"
+ICE_icelandic_republic_national_populist:0 "Republic of Iceland"
+
+### Cosmetic Tags ###
+ICE_icelandic_kingdom_social_democrat:0 "Kingdom of Iceland"
+ICE_icelandic_kingdom_social_liberal:0 "Kingdom of Iceland"
+ICE_icelandic_kingdom_market_liberal:0 "Kingdom of Iceland"
+ICE_icelandic_kingdom_social_conservative:0 "Kingdom of Iceland"
+ICE_icelandic_kingdom_authoritarian_democrat:0 "Kingdom of Iceland"
+ICE_icelandic_kingdom_paternal_autocrat:0 "Kingdom of Iceland"
+ICE_icelandic_kingdom_national_populist:0 "Kingdom of Iceland"
 
 ### Events ###
 ice.1.t:0 "Fuel Shortage"
-ice.1.d:0 "Due to the recent economic downturn the government cannot afford much needed fuel for our economy, mainly the fishing fleet."
+ice.1.d:0 "The recent economic downtown has severely diminished the ability of our government and private companies to secure fuel shipments. The fishing industry, which is one of the largest economic sectors in Iceland, is facing collapse as a result"
 ice.1.a:0 "Blast! No money!"
 ice.2.t:0 "Deal with Iceland"
-ice.2.d:0 "Due to the financial pressure that Iceland is under and the fact that they have very little fuel, it seems that this would be the best time to offer them a deal for fuel. We could use this as our first stepping stone to a longer deal that will benefit us."
-ice.2.a:0 "Approach them with a deal!"
-ice.2.b:0 "Not really the time."
+ice.2.d:0 "The Icelandic economy has suffered economic recently. As a result, A massive fuel shortage looms over Iceland, and threatens to destroy its fishing industry. We can offer them fuel in exchange in exchange for their recognition of our exclusive right to fish off off the coast of Greenland. Perhaps this could also be the beginning of a long and beneficial relationship."
+ice.2.a:0 "Approach Iceland with an offer!"
+ice.2.b:0 "This does not concern us."
 ice.3.t:0 "Canadian Fuel for Rights"
-ice.3.d:0 "The Canadians have approached us with a deal to bring much needed fuel into Iceland. We will need to give up some of our fishing rights off the coast of Greenland but we can avert a crisis."
+ice.3.d:0 "The Canadians have approached us with an offer of fuel to alleviate our economic woes. In exchange, they for concessions in fishing rights off the coast of Greenland. If we accept this deal, we may avoid a potential crisis."
 ice.3.a:0 "Accept the deal!"
 ice.3.b:0 "The price is too high."
 ice.4.t:0 "Iceland Accepts"
-ice.4.d:0 "Iceland has accepted the deal. We are in business and we may extend our fishing operations around coast of Greenland as well begin with plan to extend our influence over Iceland in order to make it base for future invasion of British isles."
+ice.4.d:0 "Iceland has accepted our fuel deal. Our fishing boats now have uninhibited access to Greenland, and Iceland's fuel shortage will soon pass. Perhaps we can exploit this co-operation in later dealings with Iceland."
 ice.4.a:0 "Great News!"
 ice.5.t:0 "Iceland Refuses"
-ice.5.d:0 "Damn those Icelanders! They have refused our offer to supply them with fuel in return for them giving up fishing rights around the coast of Greenland. We must find other way to allow us to extend our influence over their island."
+ice.5.d:0 "Damn those Icelanders! They have refused our offer of fuel in exchange for recognition of our fishing rights around the coast of Greenland. We must another way to extend our influence over their island."
 ice.5.a:0 "Too bad."
 ice.6.t:0 "Royalist Meddle in Iceland"
-ice.6.d:0 "The Royalists are using the Icelanders' fuel crisis to meddle in Iceland's affairs. This is obviously the first move in a plot to gain foothold on Iceland and use it as base for another foolish attempt to retake British isles. Republican navy was ordered on full alert in response to this threat..."
+ice.6.d:0 "The Royalists are using Iceland's fuel crisis to meddle in Iceland. This is obviously but the beginning of Canadian tampering in Iceland. A Canadian influenced Iceland could become a base for another foolish attempt to retake British isles. The Republican navy was placed on full alert in response to this threat..."
 ice.6.a:0 "We need to keep our eyes on this."
 ice.7.t:0 "The Fishermen Protest"
 ice.7.d:0 "Fishermen have begun protesting against our decision to give up our fishing rights off the coast of Greenland, we were forced to accept in treaty we have signed with Canada. If they would only see reason..."
@@ -33,7 +73,7 @@ ice.9.d:0 "Bowing to pressure at home, the Icelandic government has cancelled it
 ice.9.a:0 "Too bad."
 ice.9.b:0 "Interesting."
 ice.10.t:0 "The Reykjavik Riots"
-ice.10.d:0 "The refusal of the Icelandic government to cancel its controversial trade deal with Canada has led to large riots in Reykjavik called by opposition parties, socialists and various labour unions. They are demanding an immediate end to the trade deal regarding fishing right along the coast of Greenland as well as an end to unwelcomed Canadian meddling in Icelandic national affairs."
+ice.10.d:0 "The refusal of the Icelandic government to cancel its controversial trade deal with Canada has led to large riots in Reykjavik called by opposition parties, socialists and various labour unions. They are demanding an immediate end to the trade deal regarding fishing right along the coast of Greenland as well as an end to unwelcome Canadian meddling in Icelandic national affairs."
 ice.10.a:0 "Damn those rioters!"
 ice.10.b:0 "Interesting."
 ice.11.t:0 "Modifying the Deal"
@@ -44,7 +84,7 @@ ice.12.t:0 "Send the Troops to Iceland"
 ice.12.d:0 "Iceland wishes to modify the treaty with us to gain the fishing rights back. In return they are offering us the ability to station our land, naval and air forces there. Just what we wanted..."
 ice.12.a:0 "Accept their proposition."
 ice.12.b:0 "Refuse such a proposal!"
-ice.13.t:0 "Canadian Troops in Ireland"
+ice.13.t:0 "Canadian Troops in Iceland"
 ice.13.d:0 "The Canadian Royalists have used their deal with the government of Iceland to move their forces onto Iceland. There is no doubt that they will use the Island as a base for further incursions against the Union of Britain."
 ice.13.a:0 "This is unacceptable!"
 ice.13.b:0 "Excellent."
@@ -67,15 +107,15 @@ ice.17.t:0 "The Crisis"
 ice.17.d:0 "The blockade has caused a crisis in the cabinet and the members of the Popular Unity Party have demanded an election. The fisherman throughout the country have sided with the opposition. What should we do?"
 ice.17.a:0 "Hold an election."
 ice.17.b:0 "No elections!"
-ice.18.t:0 "Icelands Opposition walks out"
-ice.18.d:0 "After the failure of Icelands government to call an election, the Popular Unity Party and the Nationalist Party members left the government. Protests are mounting and several armed people have been seen outside of the government buildings."
+ice.18.t:0 "Iceland's Opposition walks out"
+ice.18.d:0 "After the failure of Iceland's government to call an election, the Popular Unity Party and the Nationalist Party members left the government. Protests are mounting and several armed people have been seen outside of the government buildings."
 ice.18.a:0 "This is trouble."
 ice.18.b:0 "Interesting."
 ice.19.t:0 "The People storm the Parliament"
 ice.19.d:0 "The members of the Popular Unity Party and the Nationalist Party have agitated the crowd into a near frenzy. The protesters have stormed the government buildings and they are barely being kept out of the main assembly hall. Our MPs are convening to the sound of the Revolution."
 ice.19.a:0 "Ask Canada for help!"
 ice.19.b:0 "We can take care of this!"
-ice.20.t:0 "Icelands Government asks for Help"
+ice.20.t:0 "Iceland's Government asks for Help"
 ice.20.d:0 "With the violence of the protests, and what could possibly be Union involvement, the Icelandic government has asked us to send in our troops to quell the uprising. The King is anxious to support the government but the PM would like to avoid an open conflict on the island."
 ice.20.a:0 "Send in the troops!"
 ice.20.b:0 "Refuse their request."
@@ -94,12 +134,12 @@ ice.23.a:0 "Horrible!"
 ice.23.b:0 "We have to do something!"
 ice.23.c:0 "Interesting."
 ice.24.t:0 "Canadians triumph in Reykjavik"
-ice.24.d:0 "The Canadian troops sent to Iceland have been able to secure Reyjavik from opposition and protesters. Neither the workers nor the Icelandic government will forget this."
+ice.24.d:0 "The Canadian troops sent to Iceland have been able to secure Reykjavik from opposition and protesters. Neither the workers nor the Icelandic government will forget this."
 ice.24.a:0 "Back to business!"
 ice.24.b:0 "Terrible news!"
 ice.24.c:0 "The Syndicalists lose again."
 ice.25.t:0 "Protesters triumph in Reykjavik"
-ice.25.d:0 "The alliance between opposition and protesters on Iceland have been able to capture Reyjavik. They are now building a new, Syndicalist country."
+ice.25.d:0 "The alliance between opposition and protesters on Iceland have been able to capture Reykjavik. They are now building a new, Syndicalist country."
 ice.25.a:0 "Time to pack..."
 ice.25.b:0 "The workers triumph again!"
 ice.25.c:0 "The Syndicalists triumph again."
@@ -142,24 +182,8 @@ ice.35.t:0 "The new Government"
 ice.35.d:0 "The Canadian government has installed the Nationalist Party in Iceland. The strong presence of this party will allow Iceland to hopefully prosper in the face of Socialist agitation."
 ice.35.a:0 "Hail the Nationalists!"
 
-### Parties ###
-ICE_totalist_party:0 "TF-I"
-ICE_totalist_party_long:0 "Totalistaflokkur Íslands"
-ICE_radical_socialist_party:0 "KF-I"
-ICE_radical_socialist_party_long:0 "Kommúnistaflokkur Íslands"
-ICE_syndicalist_party:0 "SS"
-ICE_syndicalist_party_long:0 "Stjórnleysisstefna"
-ICE_social_democrat_party:0 "AF"
-ICE_social_democrat_party_long:0 "Alþýðuflokkurinn"
-ICE_market_liberal_party:0 "SF"
-ICE_market_liberal_party_long:0 "Sjálfstæðisflokkurinn"
-ICE_social_liberal_party:0 "FSF"
-ICE_social_liberal_party_long:0 "Framsóknarflokkurinn"
-ICE_social_conservative_party:0 "HF"
-ICE_social_conservative_party_long:0 "Heimastjórnarflokkurinn"
-ICE_authoritarian_democrat_party:0 "ISI"
-ICE_authoritarian_democrat_party_long:0 "Idontspeakicelandicflokkurinn"
-ICE_paternal_autocrat_party:0 "FTH"
-ICE_paternal_autocrat_party_long:0 "Flokkur Þjóðernissinna"
-ICE_national_populist_party:0 "NJF"
-ICE_national_populist_party_long:0 "Norðurljósflokkurinn"
+### Opinion Modifiers ###
+pos_forty:0 "Accepted Canadian fuel deal"
+neg_forty:0 "Accepted Canadian fuel deal"
+pos_twenty:0 "Declined Canadian fuel deal"
+neg_twenty:0 "Declined Canadian fuel deal"
