12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_La_Plata_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_La_Plata_l_english.yml
@@ -1,12 +1,13 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
-ARG_beat_bra:0 "Broke Brazil"
+ARG_beat_bra:0 "브라질 파괴"
+ARG_beat_bra_desc:0 "우리의 경쟁자인 브라질은 패배했습니다. 새로운 브라질 지역은 이제 우리 통제하에 있습니다."
 ARG_quenched_expansinism:0 "Quenched Expansionism"
 ARG_quenched_expansinism_desc:0 "Our borders are overstretched; our armies struggle to keep what we gained in the Platine War"
-ARG_prepared:0 "Ready for War"
+ARG_prepared:0 "전쟁 준비"
 ARG_prepared_desc:0 "The union stands ready to face our enemies!"
-ARG_no_exports:0 "Limited Exports"
+ARG_no_exports:0 "제한적 수출"
 ARG_no_exports_desc:0 "Focusing food in wards allows us to better supply our factories and army"
 ARG_merciless_union:0 "A Merciless Union"
 ARG_merciless_union_desc:0 "The ''Union'' of La Plata showed its true colours, crushing political opposition and innocents alike in the 'rebel' republics. The future is now grim for the nation that once perceived itself as a beacon of freedom..."
@@ -14,6 +15,9 @@ ARG_merciless_union_desc:0 "The ''Union'' of La Plata showed its true colours, c
 ### Opinion Modifiers ###
 ARG_virreinatos:0 "The Virreinato Manifesto"
 ARG_PRU_ANTISOC:0 "The Buenos Aires-Lima Axis"
+
+### Tooltips ###
+load_arg_bol:0 "§GWe will raise a garrison in the Andes.§!"
 
 ### Focuses ###
 ARG_renewed_expansionism:0 "Renewed Expansionism"
@@ -26,7 +30,7 @@ ARG_chile_ultimatum:0 "Chilean Ultimatum"
 ARG_chile_ultimatum_desc:0 "Chile is weak, and despite their defensible position in the wrong side of the Andes, we can easily take the lands we claimed. Current tensions caused by harassment of Platine traders can easily be used to issue an ultimatum - Magallanes or War."
 ARG_chile_fate_desc:0 "Chile always was part of the Viceroyalty, and now will return to the fold of the union. Their only defence, the Andes, is no longer a factor due to the lands we own in the South. They may resist entry into the union, but our Army does need practice, does it not?"
 ARG_chile_fate:0 "The Fate of Chile"
-ARG_bolivia_claim_desc:0 "Bolivia has no foundation as a nation state, it's very name is that of a foreigner, its borders a fabrication. Upper Peru will come back to the fold.
+ARG_bolivia_claim_desc:0 "Bolivia has no foundation as a nation state, it's very name is that of a foreigner, its borders a fabrication. Upper Peru will come back to the fold."
 ARG_bolivia_claim:0 "Claim Upper Peru"
 ARG_bolivia_fortify_chaco:0 "Fortify the Chaco"
 ARG_bolivia_fortify_chaco_desc:0 "Our recent conquest of the Chaco will be fleeting if we don't fortify it against a Bolivian counterattack, especially now that our opinions on their 'independence' are crystal clear"
@@ -69,7 +73,7 @@ ARG_malvinas_citizenship_desc:0 "The Kelpers are not much of a threat to us, and
 ARG_malvinas_develop:0 "Develop the Malvinas"
 ARG_malvinas_develop_desc:0 "The islands are still very much a barren wasteland, with nought but sheep and mountains mostly. Let us invest there, and make sure immigrants arrive in Puerto Argentino in ever greater numbers"
 ARG_malvinas_mine:0 "Natural Resources of the Malvinas"
-ARG_malvinas_mine_desc:0 "The Malvinas are rich with ore, and according some prospectors, even Oil! How could we possibly squander such amazing gifts from nature”?
+ARG_malvinas_mine_desc:0 "The Malvinas are rich with ore, and according some prospectors, even Oil! How could we possibly squander such amazing gifts from nature?"
 ARG_malvinas_dockyard:0 "Puerto Argentino's New Industrial Goals"
 ARG_malvinas_dockyard_desc:0 "Being both safe from our enemies and in a very strategic position, the Malvinas are the perfect spot for a major naval base, which will greatly help our navy keep the seas safe"
 ARG_malvinas_defense:0 "Defensive Positions in the Malvinas"
@@ -134,8 +138,8 @@ ARG_strat_bombing:0 "Strategic Bombing"
 ARG_strat_bombing_desc:0 "In order to win our war, we will need to cripple our enemy's industrial capacity. The most efficient way to do this is with long range bombers"
 ARG_secret_bombs:0 "Secret Projects"
 ARG_secret_bombs_desc:0 "Many of our scientists, mainly European exiles, speak of the new advances in physics that would allow us to make bombs of unimaginable power. They request large amounts of funding; would it be worth it?"
-ARG_radio:0 "Air-Sea Cooperation"
-ARG_radio_desc:0 "If our navy, army and air force are to cooperate in an efficient fashion, we need to ensure that radio replaces pigeons and other archaic methods of communication"
+ARG_radio_focus:0 "Air-Sea Cooperation"
+ARG_radio_focus_desc:0 "If our navy, army and air force are to cooperate in an efficient fashion, we need to ensure that radio replaces pigeons and other archaic methods of communication"
 ARG_navy_extra_effort:0 "Naval Doctrine Review"
 ARG_navy_extra_effort_desc:0 "Naval War has changed, and we should adapt our battle fleet to its new face; always keeping our Grand Fleet at the control of the Atlantic"
 ARG_cruiser_escort:0 "Cruiser Focus"
@@ -181,7 +185,7 @@ arg.1.d:0 "It's seems history does repeat itself, for Platine forces have utterl
 arg.1.a:0 "Sue for peace!"
 arg.1.b:0 "We will keep the war going!"
 arg.2.t:0 "La Plata in 1936"
-arg.2.d:0 "From 1880 Argentina enjoyed a period of economic boom and great prosperity based on the export of wheat and cattle, allowing the nation to achieve a moderate industrialisation, however, this period was ended abruptly with onset of the Great Depression in 1933. With unemployment rising rapidly and many export traders going bust Argentina fell into turmoil from which emerged a strong military cabinet, who seized control of the government in a coup with a pledge to end Argentina's economic hardships and establish the nation firmly on the international stage. Argentina went to war with Bolivia in 1933, ostensibly over the attempted Bolivian annexation of Paraguay, which marked the beginning of the ‘Great South American War'. In 1934 Argentinean troops won a series of victories against the Bolivian forces and easily evicted them from occupied Paraguay, but in response Brazil declared war on Argentina, and her armed forces a rapid advance to the La Plata river, overrunning the tiny nation of Uruguay in the process. However, the Brazilian advance was halted at the La Plata as the war got bogged down in trench systems. In late 1934, Argentinean forces inflicted a further another series of devastating defeats on the Bolivians, and Bolivia was forced to sue for peace before the close of the year. This victory meant that Argentina was free to focus on Brazil, and they began a counter-attack in 1935, which succeeded in routing the Brazilian troops and ejecting them into Curitiba. With her home lands threatened and her forces in disarray Brazil sued for peace. Shortly after this great success the governments of Paraguay and Uruguay were ‘federated' with Argentina, creating the Union of La Plata. In 1936, La Plata is still facing problems, not least that the people of Paraguay and Uruguay don't feel any connection to the Union and nationalism is ripe. Also, an already resurgent Bolivia has begun to rearm, and Brazil's currently weak government looks set to give way to a landslide victory by Getulio Vargas' progressives. Can La Plata stay intact in the face of her so quickly resurgent foes?"
+arg.2.d:0 "From 1880 Argentina enjoyed a period of economic boom and great prosperity based on the export of wheat and cattle, allowing the nation to achieve a moderate industrialisation, however, this period was ended abruptly with onset of the Great Depression in 1933. With unemployment rising rapidly and many export traders going bust Argentina fell into turmoil from which emerged a strong military cabinet, who seized control of the government in a coup with a pledge to end Argentina's economic hardships and establish the nation firmly on the international stage. Argentina went to war with Bolivia in 1933, ostensibly over the attempted Bolivian annexation of Paraguay, which marked the beginning of the 'Great South American War'. In 1934 Argentinean troops won a series of victories against the Bolivian forces and easily evicted them from occupied Paraguay, but in response Brazil declared war on Argentina, and her armed forces a rapid advance to the La Plata river, overrunning the tiny nation of Uruguay in the process. However, the Brazilian advance was halted at the La Plata as the war got bogged down in trench systems. In late 1934, Argentinean forces inflicted a further another series of devastating defeats on the Bolivians, and Bolivia was forced to sue for peace before the close of the year. This victory meant that Argentina was free to focus on Brazil, and they began a counter-attack in 1935, which succeeded in routing the Brazilian troops and ejecting them into Curitiba. With her home lands threatened and her forces in disarray Brazil sued for peace. Shortly after this great success the governments of Paraguay and Uruguay were 'federated' with Argentina, creating the Union of La Plata. In 1936, La Plata is still facing problems, not least that the people of Paraguay and Uruguay don't feel any connection to the Union and nationalism is ripe. Also, an already resurgent Bolivia has begun to rearm, and Brazil's currently weak government looks set to give way to a landslide victory by Getulio Vargas' progressives. Can La Plata stay intact in the face of her so quickly resurgent foes?"
 arg.2.a:0 "We live in a golden age! What could go wrong?"
 arg.3.t:0 "President Justo has died!"
 arg.3.d:0 "Our great leader has died today! General Agustín Pedro Justo, president of Argentina since 1933 and dictator of the Union of La Plata since her formation, has passed away peacefully during his sleep. During the first few hours after the event, a power vacuum ensued. This moment may be seized both by Justo's own supporters on the government, who are trying to setup a stable transitional government; and also by his rivals on the army, who will instead attempt a new military coup."
@@ -239,7 +243,7 @@ arg.16.d:0 "Chile folded under our pressure and has given us dominion over Magal
 arg.16.a:0 "Everything is proceeding as we have foreseen"
 arg.17.a:0 "Chile rejects demands"
 arg.17.d:0 "Chile has rejected our gracious terms, and is getting itself ready for war! They will pay for their lack of vision"
-arg.17.a:0 "War it is, then!"
+arg.18.a:0 "War it is, then!"
 arg.18.t:0 "La Plata offers an alliance"
 arg.18.d:0 "Platine diplomats reached us with alliance proposal against the red menace. Many are concerned that this would make us but pawns of La Plata, however the red menace does loom over our country"
 arg.18.a:0 "We accept this! Today the South American Anti Syndicalist Pact is born!"
