12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Literature_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Literature_l_english.yml
@@ -1,7 +1,7 @@
-﻿l_english:
+l_english:
 
 literature.1.t:0 "Alamut - newest Book of Vladimir Bartol"
-literature.1.d:0 "Slovene people are stubborn people. After many years of Germanisation they still cling unto their funny language! They are resisting our cultural machine! The newest best-seller in the Slovene speaking territories, written by Bartol, is a story of Turkish and Persian struggles to control the fortress of Alamut. The action is set in the 11th century, when Seljuk Turks started expanding into Asia Minor. It is suspected that the book will be translated into German and many more languages soon."
+literature.1.d:0 "The Slovenes are one of the lesser talked-about minorities of our Empire, though even after hundreds of years of being part of it, they've stuck to their own language and culture. The newest best-seller in the Slovene speaking territories, written by Bartol, is a story of Turkish and Persian struggles to control the fortress of Alamut. The action is set in the 11th century, when Seljuk Turks started expanding into Asia Minor. It is to suspected that the book will be translated into German and various other languages soon enough."
 literature.1.a:0 "Great!"
 
 literature.2.t:0 "Diary of a Country Priest - newest Book of Georges Benanos"
@@ -46,16 +46,16 @@ literature.11.t:0 "Sartre has written a Book about the War in Algeria"
 literature.11.d:0 "Just when Socialist troops entered Algiers, the capital of National France, Sartre published his views on liberating the natives of former French colonies. In the book he genuinely says that the pieds-noirs should come back to mainland France and leave Algieria for the Algierians who are second class citizens in their own homeland. This book is extremely popular and it seems that the government will distribute it to commissars."
 literature.11.a:0 "For the liberation of Africa!"
 
-literature.12.t:0 "Little Marin and the Sailor" - newest Book on Japan's Shelves"
+literature.12.t:0 "'Little Marin and the Sailor' - newest Book on Japan's Shelves"
 literature.12.d:0 "Our country's recent war has inspired many homecomers to express their experiences in art, one of them being the author of a romance novel of uprecedented sales numbers.\n\nThe book, bearing the title "Marin-chan to Kaigun-kun", or "Little Marin and the Sailor", tells a story of two childhood friends, and their tragic love: a boy and a girl growing up close to each other, partaking in a seemingly unchanging life. However, just when they finish high school, Japan is readying herself for war, and the boy is called to join the Navy. The two have to part from each other, Marin staying at home. Only now that they're seperated, they notice their feelings for each other, but struggle to express them in the few letters they can exchange. Just when the war draws to a close, and Marin yearns for her loved one's return, his letters stop coming.\n\nWhile the book does not represent the highest of Japanese literature, it gives an astonishingly detailed insight to both the daily lives of a farmer's daughter in rural Japan and of a Japanese Navy Marine. The book is scheduled to be translated to German, English and Russian."
 literature.12.a:0 "Tell me, how does it end?"
 
-literature.13.t:0 "Der Kleine Prinz" - newest book of Statthalter Göring"
+literature.13.t:0 "'Der Kleine Prinz' - newest book of Statthalter Göring"
 literature.13.d:0 "A novel called Der Kleine Prinz ("The Little Prince"), recently published in a Mittelafrican publishing house, has caused quite some stir, as the author and illustrator is none other than Statthalter Hermann Göring himself. In the small tale, the Statthalter lovingly details the fate of a young boy stranded on a miniscule planet. On his quest to find cake, he must confront the cruelties of the world, but can finally overcome them through superior Prussian discipline. "Soon you will find this book in every future soldier's room", critics are quoted as saying."
 literature.13.a:0 "Great!"
 
-literature.14.t:0 "Auf den Marmorklippen, A Book by Ernst Júnger."
-literature.14.d:0 "One of the most important politicians in our nation is also a very good writer. This is his latest book."
+literature.14.t:0 "Auf den Marmorklippen, A Book by Ernst Jünger."
+literature.14.d:0 "Ernst Jünger, one of our accomplished generals, is also a successful author. Today his newest book came out in the homeland: Auf den Marmorklippen, on the Marble Cliffs. It‘s a novel full of sometimes obscure symbolism, magic and the inner, hidden workings of life itself. Set in a fantasy world, the rich, art-loving civilisation of Marina is living in peace next to the martial nomads of the steppes. Two brothers are the protagonists of the story who try to stop the Oberförster, the Chief Ranger, from slowly overtaking the beautiful town of Marina. More and more nomads are listening to the Oberförster, who acts jovial it first, but soon proves to be a cold, power-hungry murderer. The people of Marina are stopping to listen to their poets, their values and spirit decay. When the two brothers find a cabin in the woods where the Oberförster‘s henchmen murder their victims, they try to rise up against the villain, but to no avail. Only their magic allows them to escape. They have to set fire to their house on the cliffs of marble and their life‘s work watching the city of Marina burn on the horizon, returning to a state of fatalism.The book has gained mixed reviews. While some praise it for it's elaborate aesthetics and the insight in the way the world works, some readers more interested in the political implications of the Marmorklippen are wondering if it is supposed to be Ernst Jünger's commentary on the harsh reality of Mittelafrikan politics. Jünger himself didn't comment on it, but his brother Friedrich Georg, a poet, said that it's a shoe that fits various feet'."
 literature.14.a:0 "This one I will buy."
 
 literature.15.t:0 "The Blue Lotus"
