--- a/Kaiserreich Korean Translation/localisation/KR_Madras_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Madras_l_english.yml
@@ -1,7 +1,12 @@
-﻿l_english:
+l_english:
+
+### Tooltips ###
+MAD_receive_one_regiment:0 "Will receive one infantry regiments in the capital\n"
+MAD_receive_two_regiments:0 "Will receive two infantry regiments in the capital\n"
 
 ### Events ###
 madras.1.t:0 "National Elections - 1936"
 madras.1.d:0 "For the first time since the Indo-Tamil War, elections are being held, despite subjugation under the Princely boot. Frustrated by Subbarayan's decision to end the war under bad terms, the now unpopular Swaraj party has dropped him in favour of Satyamurti, with a platform of reconstruction and stability. The Justice party, however, contends that the 'brahmins,' the Swaraj, only aim to impoverish the Tamils and make them servants to the Princes, putting forward Ramasamy Periyar as their man to lead Madras."
 madras.1.a:0 "The Swaraj maintain control"
 madras.1.b:0 "The Self-Respect Party breaks tradition"
+
