12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Focuses - Economic ###
 NEE_building_our_economy:0 "Building our Economy"
@@ -160,12 +160,12 @@ NECAN:0 "New England Join's the Entente"
 NEENT:0 "New England Join's the Entente"
 CMM:0 "Criticised the Minute Men"
 NCMM:0 "Didn't criticise the Minute Men"
-NEE_freindship_CAN:0 "
+NEE_friendship_CAN:0 ""
 NEE_new_englander_irish_trade:0 "New England - Irish Trade ties"
 NEE_freindship_IRE:0 "New England - Irish Friendship"
 NEE_pacific_ties_trade:0 "Pacific States - New England Trade connections"
 NEE_pacific_ties_CAL:0 "New England - Pacific States ties"
-
+occupied_new_england:0 "New England Has been Occupied"
 ### Events ###
 neeflavor.1.t:0 "The Occupation of New England"
 neeflavor.1.d:0 "The outbreak of civil war has left the New England region lightly defended and vulnerable to occupation. If we strike first, we could close a weak point on our Eastern Flank and strengthen our position against an invasion from a hostile American power. All but abandoned by their government, we anticipate our New England cousins will welcome our intervention."
@@ -274,9 +274,8 @@ neeflavor.24.t:0 "Major Yankee Offensive!"
 neeflavor.24.d:0 "We are under attack! Throughout New England a major coordinated uprising has occurred in every city from Boston to Bangor to Buffalo. Our soldiers and leaders are under attack throughout New England. A number of leaders in Canada are requesting we begin to re-examine how we are ruling over the New Englanders."
 neeflavor.24.a:0 "Bloody Yankees!"
 neeflavor.25.t:0 "Fate of New England?"
-neeflavor.25.d:0 "After the major offensive by the Yankee Rebels against our rule, three solutions have come into being for how to handle New England. The first option is to give them to the Federal government and let them handle them. The other option is to give it to Huey Long and his band in New Orleans. Finally a number are suggesting we offer them full and equal rights as Canadians. The last one may take some time to calm tempers though."
+neeflavor.25.d:0 "After the major offensive by the Yankee Rebels against our rule, two solutions have come into being for how to handle New England. The first option is to give them to the Federal government and let them handle them. On the other hand a number are suggesting we offer them full and equal rights as Canadians. The last one may take some time to calm tempers though."
 neeflavor.25.a:0 "Give it to the USA"
-neeflavor.25.b:0 "Give it to the AUS"
 neeflavor.25.c:0 "New Englanders are now Canadians!"
 
 neeflavor.30.t:0 "The Constitution of New England"
