12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Piratini_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Piratini_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 PIR_bagual:0 "Tattered Spirit"
@@ -35,16 +35,16 @@ PIR_totalist_party:0 "M3"
 PIR_totalist_party_long:0 "Movimento Maximista Meridional"
 
 ### Events ###
-PIR.1.t: "Elections of 1946"
-PIR.1.d: "Since we've been granted autonomy, the people of the Piratiní Republic have been expecting the day they'd finally choose their president. And this is it! Three main parties are disputing the votes: the more hardline-conservative Partido Conservador under Irineu Bornhausen and Mário Gomes da Silva, the traditional Partido Republicano with Affonso Camargo and Caetano Munhoz da Rocha, and the liberal Partido Federal with Clotário Portugal and Vespasiano Barbosa Martins"
-PIR.1.a: "Partido Conservador - Bornhausen and Gomes da Silva"
-PIR.1.b: "Partido Republicano - Camargo and Munhoz da Rocha"
-PIR.1.c: "Partido Federal - Clotário Portugal and Barbosa Martins"
+PIR.1.t:0 "Elections of 1946"
+PIR.1.d:0 "Since we've been granted autonomy, the people of the Piratiní Republic have been expecting the day they'd finally choose their president. And this is it! Three main parties are disputing the votes: the more hardline-conservative Partido Conservador under Irineu Bornhausen and Mário Gomes da Silva, the traditional Partido Republicano with Affonso Camargo and Caetano Munhoz da Rocha, and the liberal Partido Federal with Clotário Portugal and Vespasiano Barbosa Martins"
+PIR.1.a:0 "Partido Conservador - Bornhausen and Gomes da Silva"
+PIR.1.b:0 "Partido Republicano - Camargo and Munhoz da Rocha"
+PIR.1.c:0 "Partido Federal - Clotário Portugal and Barbosa Martins"
 
 ### Focuses ###
 PIR_mil:0 "Newborn Armed Forces"
 PIR_mil_desc:0 "Our military was disbanded a century ago, and we will need great, sweeping efforts to establish a modern fighting force"
-PIR_mil2:0 "Organise the Riograndense Armed Forces"
+PIR_mil2:0 "The Riograndense Armed Forces"
 PIR_mil2_desc:0 "Our armed forces organisation continues; now with special naval, aerial and ground branches, we will forge our military into the envy of all"
 PIR_army:0 "Artillery Battalions"
 PIR_army_desc:0 "Our artillery pieces are not up the standards of modern warfare, especially when considering the relative abundance of them in our armed forces"
@@ -91,7 +91,7 @@ PIR_eco_desc:0 "In order to properly plan for the future, we must assess the pre
 PIR_infra:0 "Infrastructure Renewal"
 PIR_infra_desc:0 "The beaten tracks Brazil bothered to build in our lands are no proper way of travel; modernity much reach all corners of the Republic"
 PIR_infra2:0 "Infrastructure Investments"
-PIR_infra2_desc:0 "We will redouble our infrastructure efforts, and ensure our major cities are well linked
+PIR_infra2_desc:0 "We will redouble our infrastructure efforts, and ensure our major cities are well linked"
 PIR_manufact:0 "Rekindle Local Manufacturing"
 PIR_manufact_desc:0 "Predatory Brazilian practices have prevented the hard working Riograndense people to reach it's manufacturing potential. No more!"
 PIR_plan_goncalves:0 "Plan Gonçalves"
@@ -100,7 +100,7 @@ PIR_hvyind:0 "Heavy Industry Incentives"
 PIR_hvyind_desc:0 "We will do heavy industry a favour, and ensure it can do its part in rebuilding Rio Grande"
 PIR_education_reform:0 "Extensive Education Reform"
 PIR_education_reform_desc:0 "Our education system is still too Brazilian to be properly ran; sweeping reforms are in order"
-PIR_manufact2:0 "Extensive Industrialisation Program"
+PIR_manufact2:0 "Extensive Industrialisation"
 PIR_manufact2_desc:0 "The next step of plan Gonçalves begins: The building of said modern facilities"
 PIR_armyind:0 "Military Industrial Contracts"
 PIR_armyind_desc:0 "-"
